Customize Bootsrap variables

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>About Us</h1>
-<p>We are working on our Pinteresting app.</p>
+<div class="page-header">
+	<h1>About Us</h1>
+</div>
+<p>This application was built with help from the <%= link_to "One Month Rails", "http://onemonth.com" %> course.</p>
+<p>Programmed by: Matt Witmer</p>
