--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,5 +1,16 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+$font-family-sans-serif: 'Lato', 'Helvetica Neue', Helvetica, Arial, 'sans-serif';
 $navbar-inverse-bg:   #d35400;
 $navbar-inverse-link-color: #ecf0f1;
 $brand-primary: #e67e22;
 
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
